@@ -2,7 +2,7 @@
 
     This file is part of the Maude 3 interpreter.
 
-    Copyright 1997-2024 SRI International, Menlo Park, CA 94025, USA.
+    Copyright 1997-2025 SRI International, Menlo Park, CA 94025, USA.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -93,6 +93,9 @@ public:
   DagNode* makeCanonicalCopy(DagNode* original, HashConsSet* hcs);
 
 private:
+  static bool eqRewriteStandardStrategy(Symbol* symbol, DagNode* subject, RewritingContext& context);
+  static bool eqRewriteComplexStrategy(Symbol* symbol, DagNode* subject, RewritingContext& context);
+
   bool rewriteAtTop(AU_DagNode* subject, RewritingContext& context);
   bool rewriteAtTopNoOwise(AU_DagNode* subject, RewritingContext& context);
   bool complexStrategy(AU_DagNode* subject, RewritingContext& context);
