@@ -2,7 +2,7 @@
 
     This file is part of the Maude 3 interpreter.
 
-    Copyright 1997-2024 SRI International, Menlo Park, CA 94025, USA.
+    Copyright 1997-2025 SRI International, Menlo Park, CA 94025, USA.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -94,6 +94,9 @@ private:
     //
     int nonCtorBound;
   };
+  
+  static bool eqRewriteStandardStrategy(Symbol* symbol, DagNode* subject, RewritingContext& context);
+  static bool eqRewriteComplexStrategy(Symbol* symbol, DagNode* subject, RewritingContext& context);
 
   void computePath(int sortIndex, SortPath& path);
   void memoStrategy(MemoTable::SourceSet& from,
